feat: 2분코딩 8편 ingest + 부실 페이지 9개 보강 + 배포 가이드 다이어그램 보정
## 2분코딩 영상 8편 ingest (raw/2bun-coding/)
- getConnection()이 빠른 이유 → concept-db-connection-pool
- Copilot 토큰 종량제 → src-copilot-token-pricing
- 새벽 502 (Keep-Alive) → concept-keepalive-timeout-race
- VARCHAR(255) 진짜 이유 → concept-varchar-length-prefix
- 크론잡 Forbid 함정 → concept-cronjob-concurrency-trap
- @Transactional 롤백 → concept-transactional-rollback-policy
- API 호환성 → concept-api-backward-compatibility
- HTTP HOL 블로킹 → concept-http-hol-blocking
- 누적 인사이트 "기본값과 가정의 함정" 패턴을 6개 페이지 비교표로 연결
- mkdocs.yml nav 신규 카테고리 "DB·운영·인프라" 추가

## 부실 페이지 9개 공식 문서 기반 대폭 보강
- concept-spring-core (41→362줄, 11×)
- entity-jvm (39→207줄)
- concept-oop (40→216줄, SOLID/LSP 추가)
- concept-design-patterns (38→247줄, GoF 분류 + 실무 8선 깊이)
- entity-spring-framework (42→176줄, 7.0 변화 + 모듈 구조)
- entity-spring-boot (43→230줄, 자동 설정·Actuator·구조)
- entity-querydsl (43→334줄, 풀스택 코드 예시)
- concept-api-versioning (35→232줄, Spring 7.0 신규)
- concept-jspecify-null-safety (43→212줄, NullAway 통합)

## 배포 가이드 다이어그램 — HTML+텍스트 2채널
- mermaid의 subgraph direction 버그(외부 연결 시 무시) 회피
- HTML+flexbox로 4-1-2 행 구조 + 색 3톤 통일
- 각 단계 글 풀이 추가 (시각 + 텍스트 가독성)
- README에 빌드 워크플로 + fswatch 자동 빌드 안내

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>